@@ -5,6 +5,7 @@ import java.util.List;
 
 import org.apache.http.NameValuePair;
 import org.apache.http.message.BasicNameValuePair;
+import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
 
@@ -24,13 +25,14 @@ public class ChatManager {
     public static final String url_join_room = url_qualifier+"joinRoom";
     public static final String url_leave_room = url_qualifier+"leaveRoom";
     public static final String url_post_message = url_qualifier+"post";
+    public static final String url_get_messages = url_qualifier+"pullRecentChat";
     
     
-    private static List<NameValuePair> rgparamsMessageInfo(Message message) {
+    private static List<NameValuePair> rgparamsMessageInfo(MessageInfo message) {
         List<NameValuePair> rgparams = new ArrayList<NameValuePair>();
-        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_TIMESTAMP, new Long(message.dateTimestamp.getTime()).toString()));
-        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_BODY, message.stMessage));
-        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_SENDER, message.user.getUsername()));
+        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_TIMESTAMP, Long.valueOf(message.getTimeStamp().getTime()).toString()));
+        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_BODY, message.getBody()));
+        rgparams.add(new BasicNameValuePair(RequestParameters.PARAMETER_MESSAGE_SENDER, message.getSender()));
         return rgparams;
     }
     
@@ -71,7 +73,32 @@ public class ChatManager {
 		json = jsonParser.makeHttpRequest(url, "POST", rgparams);
         try {
         	boolean fSucceeded = json.getString(RequestParameters.PARAMETER_SUCCESS).equals("true");
-            return new RequestResultSet(fSucceeded, json.getString(RequestParameters.PARAMETER_MESSAGE_BODY));
+            return new RequestResultSet(fSucceeded, json.getString(ResponseParameters.PARAMETER_ERROR_MSG));
+        } catch (JSONException e) {
+            e.printStackTrace();
+        }
+    	return null;
+    }
+    
+    private static PullMessageResultSet rgmessagePostRequest(List<NameValuePair> rgparams, String url) {
+    	JSONObject json = null;
+    	JSONParser jsonParser = new JSONParser();
+		json = jsonParser.makeHttpRequest(url, "POST", rgparams);
+        try {
+        	boolean fSucceeded = json.getString(RequestParameters.PARAMETER_SUCCESS).equals("true");
+        	if (fSucceeded) {
+        		List<MessageInfo> rgmessageinfo = new ArrayList<MessageInfo>();
+        		JSONArray rgmessage = json.getJSONArray(RequestParameters.PARAMETER_MESSAGE_MESSAGES);
+        		for (int i = 0; i < rgmessage.length(); i++) {
+        			JSONObject jsonobject = rgmessage.getJSONObject(i);
+        			String stBody = jsonobject.getString(RequestParameters.PARAMETER_MESSAGE_BODY);
+        			long ticks = jsonobject.getLong(RequestParameters.PARAMETER_MESSAGE_TIMESTAMP);
+        			String stSender = jsonobject.getString(RequestParameters.PARAMETER_MESSAGE_SENDER);
+        			rgmessageinfo.add(new MessageInfo(stBody, stSender, ticks));
+        		}
+        		return new PullMessageResultSet(true, rgmessageinfo, "NO ERROR");
+        	}
+            return new PullMessageResultSet(false, new ArrayList<MessageInfo>(), json.getString(ResponseParameters.PARAMETER_ERROR_MSG));
         } catch (JSONException e) {
             e.printStackTrace();
         }
@@ -122,18 +149,19 @@ public class ChatManager {
 		return makeChatRoomPostRequest(rgparams, url_leave_room);
 	}
 	
-	public static RequestResultSet postMessage(User user, ChatRoomInfo chatroominfo, Message message) {
+	public static RequestResultSet postMessage(User user, ChatRoomInfo chatroominfo, MessageInfo message) {
         List<NameValuePair> rgparams = rgparamsUserBasicInfo(user);
         rgparams.addAll(rgparamsChatRoomBasicInfo(chatroominfo));
         rgparams.addAll(rgparamsMessageInfo(message));
 		return makeChatRoomPostRequest(rgparams, url_post_message);
 	}
 	
-	public static RequestResultSet unregisterDevice() {
-		return null;
+	public static PullMessageResultSet rgstChatLogGet(ChatRoomInfo chatroominfo) {
+        List<NameValuePair> rgparams = rgparamsChatRoomBasicInfo(chatroominfo);
+		return rgmessagePostRequest(rgparams, url_add_room);
 	}
 	
-	public static List<Message> rgstChatLogGet(ChatRoomInfo chatroominfo) {
+	public static RequestResultSet unregisterDevice() {
 		return null;
 	}
 	
